[package]
name = "pulsar-cat"
version = "0.0.1"
edition = "2024"
description = "A command-line tool for working with Apache Pulsar"
authors = ["TabVersion <tabvision@bupt.icu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/pulsar-cat"
homepage = "https://github.com/yourusername/pulsar-cat"
readme = "README.md"
keywords = ["pulsar", "cli", "messaging"]
categories = ["command-line-utilities"]

# This section configures the binary
[[bin]]
name = "pulsar-cat"
path = "src/main.rs"

[dependencies]
pulsar = "6.3.1"
clap = { version = "4", features = ["cargo", "derive", "env"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1.44", features = ["rt", "macros", "rt-multi-thread", "signal"] }
flate2 = "1.0"
futures = "0.3"
serde = "1.0.219"
serde_json = "1.0.140"
